Fixing the card max-height and its parent's layout-alignment

--- a/frontend/styles/custom.css
+++ b/frontend/styles/custom.css
@@ -154,6 +154,10 @@
         margin: 0;
         margin-top: 1.5em;
     }
+
+    .new-invite-page-card {
+      max-width: 350px;
+    }
 }
 
 .green-background{
